[package]
name = "hobbes"
version = "0.1.0"
edition = "2021"
description = "A key-value store written in Rust"
authors = ["Anirudh Sudhir"]

[[bin]]
name = "hobbes-server"
path = "src/bin/hobbes-server.rs"

[[bin]]
name = "hobbes-client"
path = "src/bin/hobbes-client.rs"

[dependencies]
clap = "4.5.9"
serde = { version = "1.0.208", features = ["derive"] }
rmp-serde = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.12.0"
walkdir = "2.5.0"
